--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.0",
     "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.3.5",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
